<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/techno_study_logo"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_desc" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/header_1"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_3_1"
        app:layout_constraintTop_toBottomOf="@id/tv_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="ExtraText"
>

            <TextView
                android:id="@+id/header1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/header1_text"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:text="@string/header_2"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/header2_text_p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/header2_text_p1"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/header2_text_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/header2_text_p2"
                android:textColor="@color/black"
                android:autoLink="web"
                android:textSize="20sp"

                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/vision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:text="@string/vision"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/vision_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/vision_text"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/mission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:text="@string/mission"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/mission_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/mission_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>